{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 22,
  "lineage": "a458caed-4236-e06a-fdd4-626aa72770c8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab426b019252d4aa",
            "domain": "vpc",
            "id": "eipalloc-0ab426b019252d4aa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-232-21-203.compute-1.amazonaws.com",
            "public_ip": "18.232.21.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012c4eb657c38639e",
            "domain": "vpc",
            "id": "eipalloc-012c4eb657c38639e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-194-71.compute-1.amazonaws.com",
            "public_ip": "52.204.194.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:internet-gateway/igw-0c33aae2ac55c73cb",
            "id": "igw-0c33aae2ac55c73cb",
            "owner_id": "075059366645",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab426b019252d4aa",
            "connectivity_type": "public",
            "id": "nat-02e16f81ea865f412",
            "network_interface_id": "eni-0f57973c2b268d957",
            "private_ip": "10.0.101.127",
            "public_ip": "18.232.21.203",
            "subnet_id": "subnet-080e4fd44abb7b11d",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012c4eb657c38639e",
            "connectivity_type": "public",
            "id": "nat-0e893410de3d2bc7b",
            "network_interface_id": "eni-0412a694e345938ac",
            "private_ip": "10.0.102.59",
            "public_ip": "52.204.194.71",
            "subnet_id": "subnet-0d2d1b96d50d9ef08",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06aafd79b82b87b1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e16f81ea865f412",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06aafd79b82b87b1c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a5c0e78257f01781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e893410de3d2bc7b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a5c0e78257f0178",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c33aae2ac55c73cb",
            "id": "r-rtb-0a8963ee3a907db5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8963ee3a907db5a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:route-table/rtb-06aafd79b82b87b1c",
            "id": "rtb-06aafd79b82b87b1c",
            "owner_id": "075059366645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:route-table/rtb-07a5c0e78257f0178",
            "id": "rtb-07a5c0e78257f0178",
            "owner_id": "075059366645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:route-table/rtb-0a8963ee3a907db5a",
            "id": "rtb-0a8963ee3a907db5a",
            "owner_id": "075059366645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd6d63f39d7719c7",
            "route_table_id": "rtb-06aafd79b82b87b1c",
            "subnet_id": "subnet-0d5a557adaad900c2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e055e4d0c60f5fd0",
            "route_table_id": "rtb-07a5c0e78257f0178",
            "subnet_id": "subnet-0587de998c4cf3b2f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa9a0cdc88158057",
            "route_table_id": "rtb-0a8963ee3a907db5a",
            "subnet_id": "subnet-080e4fd44abb7b11d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cb4ec256ac7ead",
            "route_table_id": "rtb-0a8963ee3a907db5a",
            "subnet_id": "subnet-0d2d1b96d50d9ef08"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:subnet/subnet-0d5a557adaad900c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5a557adaad900c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075059366645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:subnet/subnet-0587de998c4cf3b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0587de998c4cf3b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075059366645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:subnet/subnet-080e4fd44abb7b11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080e4fd44abb7b11d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "075059366645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:subnet/subnet-0d2d1b96d50d9ef08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2d1b96d50d9ef08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "075059366645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aabae9d8c0dadd8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075059366645:vpc/vpc-0aabae9d8c0dadd8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d5d5c82ac47e1df",
            "default_route_table_id": "rtb-08093b580f33b725a",
            "default_security_group_id": "sg-028fedb66da555ee8",
            "dhcp_options_id": "dopt-ca525ab0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aabae9d8c0dadd8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08093b580f33b725a",
            "owner_id": "075059366645",
            "tags": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "course5-upgrad-project",
              "Name": "514-course5-project",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}